--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mysql": "^2.18.1",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
-    "request": "^2.81.0",
+    "request": "^2.88.2",
     "tape": "^4.7.0"
   },
   "repository": {
